syntax = "proto3";

import "pet.proto";

package user;

message UserReq {
  int32 user_id = 1;
}

message User {
  int32 user_id = 1;
  string email = 2;
  string password = 3;
  UserProfile profile = 4;

  Status status = 5;
  enum Status {
    PET_OWNER = 0; // default to pet owner
    CARE_TAKER = 1;
    BOTH = 2;
    PCS_ADMIN = 3;
  }

  CreditCard credit_card = 6;
}

message UserProfile {
  string picture_url = 1;
  int32 phone = 2;
}

message CreditCard {
  int32 card_number = 1;
  string expiry_date = 2;
  string holder_name = 3; // might differ from the user's name
}

message AddUserResp {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message UpdateUserResp {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message DeleteUserResp {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message ListAllCareTakersReq {}
message ListAllPetOwnersReq {}

message ListAllCareTakersResp {
  repeated User care_takers = 1;
}

message ListAllPetOwnersResp {
  repeated User pet_owners = 1;
}

service Users {
  rpc GetUser(UserReq) returns (User) {};
  rpc AddUser(User) returns (AddUserResp) {};
  rpc UpdateUser(User) returns (UpdateUserResp) {};
  rpc DeleteUser(User) returns (DeleteUserResp) {};

  rpc ListAllCareTakers(ListAllCareTakersReq) returns (ListAllCareTakersResp) {};
  rpc ListAllPetOwners(ListAllPetOwnersReq) returns (ListAllPetOwnersResp) {};
}
